--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": ">=0.21.1",
     "core-js": "^2.6.5",
     "esri-loader": "^2.10.0",
+    "glob": "^11.0.0",
+    "rimraf": "^6.0.1",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.3",
